--- a/first exercies/my_cellpet.html
+++ b/first exercies/my_cellpet.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
 		<meta charset="UTF-8">
 		<title>My Cell Pet</title>
 	</head>
 	<body>
-		<h1>Optimus Fuel</h1>
-		<h2>The Best Cell Pet Ever!!!!</h2>
+		<h1><strong>Optimus Fuel</strong></h1>
+		<h2>The <em>Best</em> Cell Pet Ever!!!!</h2>
 		<h3>I want to hold it all day!</h3>
-		<img src="assets/cellpet.jpeg" alt="My Cell Pet">
+		<img src="assets/cellpet.jpeg" alt="a photo of My Cell Pet">
 		<p>If it had a facebook page I would like it.</p>
 		<p>We have this bond that is unbelievably strong.</p>
 		<p>I take it where ever I go</p>
