--- a/first exercies/my_laptop.html
+++ b/first exercies/my_laptop.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
 		<meta charset="UTF-8">
 		<title>The Laptop</title>
 	</head>
