--- a/first exercies/my_page.html
+++ b/first exercies/my_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
 		<meta charset="UTF-8">
 		<title>My Freakin' Page</title>
 	</head>
@@ -8,12 +9,16 @@
 		<h1>My favorite things</h1>
 		<h2>These are a few of my favorite things</h2>
 		<h3>People</h3>
-		<p>Here are some of my favorite people!</p>
+		<p>Here are some of my favorite <em>people</em>!</p>
 		<ul>
 			<li>My brothers</li>
 			<ul>
 				<li>Matthew</li>
-				<li>Josh</li>
+				<li>
+					<a href="http://joshuakemp.blogspot.com/">Josh
+						<img src="assets/josh.jpg" alt="A photo of Josh's Blog.">
+					</a>
+				</li>
 				<li>Kevin</li>
 				<li>Caleb</li>
 			</ul>
